<?xml version="1.0" encoding="UTF-8"?>
<!--
JaamSim Discrete Event Simulation
Copyright (C) 2014 Ausenco Engineering Canada Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project name="jaamsim" basedir="." default="jar">
  <property name="exe_prefix"          value="JaamSim"/>
  <property name="ver.major"           value="2026"/>
  <property name="ver.minor"           value="05"/>
  <property name="ver"                 value="${ver.major}-${ver.minor}"/>
  <property name="src.dir"       location="src/main/java"/>
  <property name="src25.dir"     location="src/main/java25"/>
  <property name="res.dir"       location="src/main/resources"/>
  <property name="testsrc.dir"   location="src/test/java"/>
  <property name="make.dir"      location="make"/>
  <property name="build.dir"     location="build"/>
  <property name="jogl.lib"      location="jar/jogl-all.jar"/>
  <property name="gluegen.lib"   location="jar/gluegen-rt.jar"/>
  <property name="class.dir"     location="${build.dir}/classes"/>
  <property name="class25.dir"   location="${build.dir}/classes-25"/>
  <property name="testclass.dir" location="${build.dir}/testclasses"/>
  <property name="jars.dir"      location="${build.dir}/jars"/>

  <target name="clean">
    <delete dir="${build.dir}"/>
  </target>

  <exec dir="." executable="git" logError="false" failonerror="false" failifexecutionfails="false"
        outputproperty="git.branch.raw" resultproperty="git.branch.ret">
        <arg line="symbolic-ref -q --short HEAD"/>
  </exec>
  <condition property="git.branch" value="${git.branch.raw}" else="(none)">
    <not> <isfailure code="${git.branch.ret}"/> </not>
  </condition>

  <exec dir="." executable="git" logError="false" failonerror="false" failifexecutionfails="false"
        outputproperty="git.commit.raw" resultproperty="git.commit.ret">
        <arg line="rev-parse HEAD"/>
  </exec>
  <condition property="git.commit" value="${git.commit.raw}" else="(none)">
    <not> <isfailure code="${git.commit.ret}"/> </not>
  </condition>
  <echo message="Branch:${git.branch} Commit:${git.commit}" />

  <target name="compile">
    <mkdir dir="${class.dir}"/>

    <javac srcdir="${src.dir}" destdir="${class.dir}"
           release="8"
           debug="true"
           debuglevel="lines,source"
           deprecation="on"
           includeantruntime="false"
           classpath="${jogl.lib}:${gluegen.lib}">
      <compilerarg value="-Xlint:-serial"/>
    </javac>

    <mkdir dir="${class25.dir}"/>

    <javac srcdir="${src25.dir}" destdir="${class25.dir}"
           release="25"
           debug="true"
           debuglevel="lines,source"
           deprecation="on"
           includeantruntime="false"
           classpath="${jogl.lib}:${gluegen.lib}:${class.dir}">
      <compilerarg value="-Xlint:-serial"/>
    </javac>
  </target>

  <target name="compile-test" depends="jar">
    <mkdir dir="${testclass.dir}"/>

    <javac srcdir="${testsrc.dir}" destdir="${testclass.dir}"
           release="8"
           debug="true"
           debuglevel="lines,source"
           deprecation="on"
           includeantruntime="false"
           classpath="${jogl.lib}:${gluegen.lib}:${class.dir}:jar/junit-platform-console-standalone-6.1.2.jar">
      <compilerarg value="-Xlint:-serial"/>
    </javac>

    <jar jarfile="${jars.dir}/${exe_prefix}${ver}-test.jar" compress="true">
      <fileset dir="${testclass.dir}"/>
      <fileset dir="${testsrc.dir}"/>
    </jar>
  </target>

  <target name="test" depends="compile-test">
    <junit>
      <classpath>
        <pathelement location="jar/junit-platform-console-standalone-6.1.2.jar"/>
        <pathelement location="${jars.dir}/${exe_prefix}${ver}.jar"/>
        <pathelement location="${jars.dir}/${exe_prefix}${ver}-test.jar"/>
      </classpath>
      <formatter type="plain"/>
      <test name="com.jaamsim.AllTests" todir="${build.dir}"/>
    </junit>
  </target>

  <target name="jar" depends="compile">
    <jar jarfile="${jars.dir}/${exe_prefix}${ver}-bare.jar" compress="true">
      <manifest>
        <attribute name="Main-Class" value="com.jaamsim.ui.GUIFrame"/>
        <attribute name="Add-Opens" value="java.desktop/sun.awt"/>
        <attribute name="Enable-Native-Access" value="ALL-UNNAMED"/>
        <attribute name="Multi-Release" value="true"/>
        <attribute name="Class-Path" value="jogl-all.jar gluegen-rt.jar"/>
      </manifest>
      <fileset dir="${class.dir}"/>
      <fileset dir="${res.dir}"/>
      <fileset file="LICENSE"/>
      <zipfileset prefix="META-INF/versions/25/" dir="${class25.dir}"/>
    </jar>
    <jar jarfile="${jars.dir}/${exe_prefix}${ver}.jar" compress="true">
      <manifest>
        <attribute name="Main-Class" value="com.jaamsim.ui.GUIFrame"/>
        <attribute name="Add-Opens" value="java.desktop/sun.awt"/>
        <attribute name="Enable-Native-Access" value="ALL-UNNAMED"/>
        <attribute name="Multi-Release" value="true"/>
      </manifest>
      <fileset dir="${class.dir}"/>
      <fileset dir="${res.dir}"/>
      <fileset file="LICENSE"/>
      <zipfileset prefix="META-INF/versions/25/" dir="${class25.dir}"/>
      <zipfileset src="jar/gluegen-rt.jar"     includes="jogamp/**/*,com/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-windows-amd64.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-linux-amd64.jar"      includes="natives/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-linux-aarch64.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-linux-armv6hf.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-macosx-universal.jar" includes="natives/**/*"/>
      <zipfileset src="jar/gluegen-rt-natives-freebsd-amd64.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all.jar"       includes="jogamp/**/*,com/**/*,newt/**/**/*"/>
      <zipfileset src="jar/jogl-all-natives-windows-amd64.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all-natives-linux-amd64.jar"      includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all-natives-linux-aarch64.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all-natives-linux-armv6hf.jar"    includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all-natives-macosx-universal.jar" includes="natives/**/*"/>
      <zipfileset src="jar/jogl-all-natives-freebsd-amd64.jar"    includes="natives/**/*"/>
    </jar>
  </target>
  <target name="exe" depends="jar">
    <delete file="${jars.dir}/JS64.exe4j" quiet="true"/>
    <copy file="${make.dir}/JS64.exe4j" toFile="${jars.dir}/JS64.exe4j">
      <filterset>
        <filter token="EXE_PREFIX" value="${exe_prefix}"/>
        <filter token="VERSION" value="${ver}"/>
        <filter token="VERMAJOR" value="${ver.major}"/>
        <filter token="VERMINOR" value="${ver.minor}"/>
      </filterset>
    </copy>
    <delete file="${jars.dir}/JaamSim-48px.ico" quiet="true"/>
    <copy file="${make.dir}/JaamSim-48px.ico" toFile="${jars.dir}/JaamSim-48px.ico"/>
    <exec dir="${jars.dir}" executable="exe4jc">
      <arg value="JS64.exe4j"/>
    </exec>
  </target>
</project>
